[tool.poetry]
name = "export-comments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
exportcomments = "^1.0.1"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
